...
    <string name="i_agree">I agree.</string>
    <string name="should_update_firmware">Firmware Update Recommended.</string>
    <string name="should_update">To benefit from the latest fixes and features, please update your node firmware.\n\nLatest stable firmware version: %1$s</string>
    <string name="expires">Expires</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="map_filter">Map Filter\n</string>
    <string name="only_favorites">Only Favorites</string>
    <string name="show_waypoints">Show Waypoints</string>
    <string name="show_precision_circle">Show Precision Circles</string>
    <string name="client_notification">Client Notification</string>
    <string name="compromised_keys">Compromised keys detected, select OK to regenerate.</string>
    <string name="regenerate_private_key">Regenerate Private Key</string>
    <string name="regenerate_keys_confirmation">Are you sure you want to regenerate your Private Key?\n\nNodes that may have previously exchanged keys with this node will need to Remove that node and re-exchange keys in order to resume secure communication.</string>
    <string name="export_keys">Export Keys</string>
    <string name="export_keys_confirmation">Exports public and private keys to a file. Please store somewhere securely.</string>
...
    <string name="notification_permissions_description">Meshtastic uses notifications to keep you updated on new messages and other important events. You can update your notification permissions at any time from settings.</string>
    <string name="next">Next</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="nodes_queued_for_deletion">%1$d nodes queued for deletion:</string>
    <string name="clean_node_database_description">Caution: This removes nodes from in-app and on-device databases.\nSelections are additive.</string>
    <string name="connecting_to_device">Connecting to device</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="manage_map_layers">Manage Map Layers</string>
    <string name="map_layer_formats">Custom layers support .kml, .kmz, or GeoJSON files.</string>
    <string name="map_layers_title">Map Layers</string>
    <string name="no_map_layers_loaded">No custom layers loaded.</string>
    <string name="add_layer_button">Add Layer</string>
    <string name="hide_layer">Hide Layer</string>
    <string name="show_layer">Show Layer</string>
    <string name="remove_layer">Remove Layer</string>
    <string name="add_layer">Add Layer</string>
    <string name="nodes_at_this_location">Nodes at this location</string>
    <string name="selected_map_type">Selected Map Type</string>
    <string name="manage_custom_tile_sources">Manage Custom Tile Sources</string>
    <string name="add_custom_tile_source">Add Custom Tile Source</string>
    <string name="no_custom_tile_sources_found">No Custom Tile Sources</string>
    <string name="edit_custom_tile_source">Edit Custom Tile Source</string>
...
